Update image, add short description, fix mawk, add help, add docs

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -1630,6 +1630,7 @@
                         {
                             "id": "NAX001",
                             "description": "NetAlertX network scanner & notification framework",
+                            "short": "NetAlertX",
                             "prompt": "This operation will install NetAlertX.",
                             "command": [
                                 "module_netalertx install"
