Software title: Homepage (#293)
* Software title: Homepage

* Replace check_if_installed

* Update with allowing connection from safe locations

--- a/tools/json/config.software.json
+++ b/tools/json/config.software.json
@@ -1736,6 +1736,37 @@
                             "status": "Stable",
                             "author": "@Tearran",
                             "condition": ""
+                        },
+                        {
+                            "id": "HPG001",
+                            "description": "Install Homepage startpage / application dashboard",
+                            "short": "Homepage",
+                            "command": [
+                                "module_homepage install"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "! module_homepage status"
+                        },
+                        {
+                            "id": "HPG002",
+                            "description": "Remove Homepage",
+                            "command": [
+                                "module_homepage remove"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "module_homepage status"
+                        },
+                        {
+                            "id": "HPG003",
+                            "description": "Purge Homepage with data folder",
+                            "command": [
+                                "module_homepage purge"
+                            ],
+                            "status": "Stable",
+                            "author": "@igorpecovnik",
+                            "condition": "module_homepage status"
                         }
                     ]
                 },
